todo/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo
        image: rishikeshops/todo-app-new
        ports:
        - containerPort: 3000
      tolerations:
      - key: "app"
        operator: "Equal"
        value: "medium"
        effect: "NoExecute"
        volumeMounts:
        - name: todo-persistent-storage
          mountPath: /todo
      volumes:
        - name: todo-persistent-storage
          persistentVolumeClaim:
          claimName: todo-pvc
