todo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo
  type: NodePort
  ports:
  - name: http
    port: 3000
    targetPort: 3000
