todo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - todo.com
    secretName: todo-tls
  rules:
  - host: todo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo
            port:
              name: http
